# bp_quant_trading

./: Cargo.toml  Dockerfile  build.sh  config.example.toml  readme.md
.cargo/: config.toml
service/: bp-quant.service
src/: config.rs  main.rs  order_manager.rs  risk_manager.rs
src/api/: rest.rs  websocket.rs
src/strategy/: grid.rs
